# multi-modal-rag

./: .env.example  .gitignore  CHANGELOG.md  Makefile  PRD.md  README.md  USER_GUIDE.md  pyproject.toml
src/deeplens/: __init__.py  config.py  main.py
src/deeplens/core/: __init__.py  chat.py  embedding.py  factory.py  models.py  repository.py
src/deeplens/engines/: __init__.py  gemini_chat.py  gemini_embed.py  jina_clip.py  ollama_chat.py
src/deeplens/gui/: __init__.py  app.py  main_window.py
src/deeplens/gui/themes/: dark.qss  light.qss
src/deeplens/gui/widgets/: chat_panel.py  folder_tree.py  preview_panel.py  progress_bar.py  settings_dialog.py
src/deeplens/ingestion/: __init__.py  extractor.py  router.py  summarizer.py  task_queue.py  watcher.py
src/deeplens/ingestion/chunkers/: __init__.py  audio.py  document.py  image.py  subtitle.py  video.py
src/deeplens/mcp/: __init__.py  server.py
src/deeplens/repositories/: lancedb_repo.py  pgvector_repo.py
src/deeplens/search/: __init__.py  evaluator.py  generator.py  graph.py  hybrid.py  lexical.py  reranker.py  retriever.py  rewriter.py
